# amm-trading-suite

./: .gitignore  README.md  abis.json  activate.sh  config.json  exe_univ3_migrate_liq.py  exe_univ3_remove_liq.py  gas_config.json  generate_wallet.py  pool_info.json  pyproject.toml  query_uniswap_v3.py  query_univ3_pools.py  requirements.txt  setup.py  univ3_add_liq.py
agents/: engineering.md  ops.md  orchestrator.md  trader.md
amm_trading/: __init__.py  __main__.py  abis.json
amm_trading.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
amm_trading/cli/: main.py
amm_trading/contracts/: __init__.py  erc20.py  nfpm.py  pool.py  weth.py
amm_trading/core/: __init__.py  balances.py  config.py  connection.py  exceptions.py
amm_trading/operations/: __init__.py  balances.py  liquidity.py  pools.py  positions.py  (+2 more)
archive/: README.md  exe_univ3_remove_liq.py  generate_wallet.py  pool_info_univ3.json  query_positions.py  query_univ3_pools.py  query_univ3_position.py
config/: gas.json  tokens.json
docs/: CHANGELOG_PERCENTAGE_RANGES.md  PERCENTAGE_RANGES.md  QUICK_START_PERCENTAGE_RANGES.md  TICKS_AND_PRICES.md  TOKEN_AMOUNTS_GUIDE.md  UNISWAP_V4_GUIDE.md  amm-brainstoming.md
live-monitoring/: README.md  bot.py  data.py  run.sh  signals.py
research/: 01-narrow-range-strategy.md  02-wide-range-strategy.md  03-automated-vaults.md  04-delta-neutral-hedging.md  05-jit-liquidity.md  06-dynamic-range-management.md  README.md
state/: portfolio.json
tests/: example_add_range.py  example_calculate_amounts.py  test_percentage_ranges.py
(+39 files in other folders)
